{
    "name": "New Controls",
    "maps": [
        {
            "name": "PlayerInput",
            "id": "bea22cb7-a1ea-4d32-b289-a8c75a8c30ca",
            "actions": [
                {
                    "name": "Tap",
                    "type": "Button",
                    "id": "c34ac627-75d2-4ffc-a73b-c59e938ca0fb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Tap",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "9abf7570-ed5f-4b0a-aff8-b92cafc535f4",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Tap",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard",
            "bindingGroup": "Keyboard",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}